--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vera</title>
-    <link rel="stylesheet" href="/failover/assets/css/style.css">
+    <link rel="stylesheet" href="/assets/css/style.css">
 </head>
 
 
@@ -30,7 +30,7 @@
                     </div>
                 </div>
 
-                <img src="/failover/assets/img/mavera-logo-new.svg" width="275" height="59">
+                <img src="/assets/img/mavera-logo-new.svg" width="275" height="59">
             </div>
 
         </div>
