--- a/index.html
+++ b/index.html
@@ -3,40 +3,30 @@
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vera</title>
-    <link rel="stylesheet" href="/assets/css/style.css">
+    <title>$TITLE$</title> <!-- Placeholder for title -->
+    <link rel="stylesheet" href="https://raw.githubusercontent.com/MaveraDSS/mavera-failover-site/774c879a3d8076dddcc9df5bcf569aaf2ac435bd/assets/css/style.css">
 </head>
-
 
 <body cz-shortcut-listen="true" data-new-gr-c-s-check-loaded="14.1043.0" data-gr-ext-installed="">
     <div id="header">
-
         <div class="maintainance-container">
             <div class="maintainance-text">
                 <div class="header">
-                    Temporary disruption!
+                    $TITLE$ <!-- Placeholder for title -->
                 </div>
                 <div class="mavera-text">
                     <div class="mavera">
-                        Mavera DSS is currently experiencing a disruption or planned maintenance.
-                        <br><br>
-                        We are aware of the situation and working on getting the system up and running again as soon as
-                        possible.
+                        $BODY$ <!-- Placeholder for body -->
                     </div>
                     <div class="sorry">
                         Sorry for the inconvenience.
                     </div>
                 </div>
-
-                <img src="/assets/img/mavera-logo-new.svg" width="275" height="59">
+                <img src="https://raw.githubusercontent.com/MaveraDSS/mavera-failover-site/774c879a3d8076dddcc9df5bcf569aaf2ac435bd/assets/img/mavera-logo-new.svg" width="275" height="59">
             </div>
-
         </div>
     </div>
-
-
 </body>
 
 </html>
